--- a/testing.ipynb
+++ b/testing.ipynb
@@ -13,6 +13,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "a16ac79b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cài đặt thư viện này vì pd.to_excel() yêu cầu openpyxl\n",
+    "# !pip install openpyxl=3.1.5"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "a646666c",
    "metadata": {},
@@ -22,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "91017355",
    "metadata": {},
    "outputs": [],
@@ -41,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "c351eec3",
    "metadata": {},
    "outputs": [
@@ -61,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "3638d5d1",
    "metadata": {},
    "outputs": [],
@@ -71,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "0fd69981",
    "metadata": {},
    "outputs": [
@@ -528,12 +539,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "192aa258",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# pd_df.to_csv('data/gemini/processed_data.csv', index=False)"
+    "# pd_df.to_csv('labeled_data/gemini.csv', index=False)"
    ]
   }
  ],
